# deivao-led-controller

./: LICENSE  README.md
desktop-app/: index.html  package-lock.json  package.json
desktop-app/src/: App.svelte  app.css
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/src/: main.rs
desktop-app/src/features/ColorSelection/: index.css  index.svelte
desktop-app/src/features/Favorites/: index.css  index.svelte
desktop-app/src/features/Gradient/: index.css  index.svelte
desktop-app/src/routes/: index.svelte
desktop-app/src/services/: serial.ts
desktop-app/src/shared/@types/: Color.ts  Wifi.ts
desktop-app/src/shared/components/BottomTabNavigator/: index.css  index.svelte
desktop-app/src/shared/components/GradientMaker/: index.css  index.svelte
desktop-app/src/shared/stores/: colors.ts  connection.ts  theme.ts
desktop-app/src/shared/utils/: debounce.ts
esp-32/: platformio.ini
esp-32/src/: definitions.h  main.cpp
esp-32/src/Controllers/ControllerSerial/: ControllerSerial.cpp  ControllerSerial.h
esp-32/src/LedManager/: LedManager.cpp  LedManager.h
esp-32/src/Logger/: Logger.cpp  Logger.h
esp-32/src/SettingsManager/: SettingsManager.cpp  SettingsManager.h
esp-32/src/Types/: Gradient.h
esp-32/src/Types/Color/: Color.cpp  Color.h
esp-32/src/Types/Effect/: Effect.cpp  Effect.h
esp-32/src/Types/EffectUnit/: EffectUnit.cpp  EffectUnit.h
esp-32/src/Types/GitHubAssets/: AssetMetadata.h  Assets.h
esp-32/src/UpdateService/: UpdateService.cpp  UpdateService.h
esp-32/src/Utils/: Utils.cpp  Utils.h
(+9 files in other folders)
