[package]
name = "pc-led"
version = "0.0.1"
description = "PC Led"
authors = ["GustavoRFS"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies.tauri-plugin-serialport]
git = "https://github.com/lzhida/tauri-plugin-serialport"
tag = "v0.1.0"

[dependencies]
tauri = { version = "1.5", features = [ "updater", "system-tray", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serial2 = "0.2.17"
once_cell = "1.19.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
